<resources>
    <string name="superawesome__app_name">SuperAwesome SDK</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="superawesome__about_sa_ads">About SA Ads</string>
    <string name="superawesome__about_sa_ads_content">This is a SuperAwesome kid-safe ad.\nClick <a href="https://superawesome.tv/">here</a> for more information.</string>

    <string name="superawesome__rate_ad">Rate This Ad</string>
    <string name="superawesome__rate_ad_content">Rate this ad:</string>

    <string name="superawesome__hello_world">Hello world!</string>
    <string name="superawesome__action_settings">Settings</string>
    <string name="superawesome__title_activity_savideo">SAVideoActivity</string>
    <string name="superawesome__title_activity_sagamewall">Gamewall</string>
<<<<<<< HEAD
    <string name="superawesome__close_fullscreenvideo">Close</string>
=======

    <string name="superawesome__titlevideo_click">Find out more »</string>
    <string name="superawesome__video_duration0">Ad: 0</string>
    <string name="superawesome__video_durationErr">Ad: Err</string>
    <string name="superawesome__video_durationN">Ad: %1$d</string>
>>>>>>> develop_v3
</resources>
